# boxdbot

./: .gitignore  README.md  app.py  main.py  package.json  requirements.txt  scraper.py
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: film.rs  main.rs
